# AirMobiSim_libveins

./: .gitignore  .nedfolders  .project  CMakeLists.txt  Makefile  README.md  README.txt  conanfile.txt  configure
examples/simpleScenario/: SimpleScenarioNetwork.ned  erlangen.rou.xml  omnetpp.ini  package.ned
src/: makefrag
src/veins_libairmobisim/app/: ExampleAirMobiSimApp.cc  ExampleAirMobiSimApp.h  ExampleAirMobiSimApp.ned
src/veins_libairmobisim/mobility/: DroCIManager.cc  DroCIManager.h  DroCIManager.ned  DroCIMobility.cc  DroCIMobility.h  DroCIMobility.ned
src/veins_libairmobisim/modules/: UavInserter.cc  UavInserter.h  UavInserter.ned
src/veins_libairmobisim/node/: Uav.ned
src/veins_libairmobisim/proto/: airmobisim.grpc.pb.cc  airmobisim.grpc.pb.h  airmobisim.pb.cc  airmobisim.pb.h
subprojects/veins_inet/: configure
subprojects/veins_inet3/: configure
subprojects/veins_libairmobisim/: .cproject  .project  Makefile  airmobisim.proto  configure
subprojects/veins_libairmobisim/examples/simpleScenario/: erlangen.poly.xml  erlangen.rou.xml  package.ned
subprojects/veins_libairmobisim2/: .cproject  .nedfolders  airmobisim.proto  conanbuildinfo.mak  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  configure  graph_info.json  run
subprojects/veins_libairmobisim2/examples/simpleScenario/: DroCIManager.ned  SimpleScenarioNetwork.ned  config.xml  omnetpp.ini
subprojects/veins_libairmobisim2/examples/veins_libairmobisim/: AirMobiSimScenario.ned  package.ned
subprojects/veins_libairmobisim2/src/: Makefile  Makefile.inc.default  makefrag
(+24 files in other folders)
